src/objects/Recruit__c.object
<CustomObject>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <description>Field director of the UNION REP/ORG.</description>
        <formula>IF( ISBLANK(Recruit__c)   &amp;&amp;  NOT ISBLANK(Alt_Employer__c), 

Alt_Employer__r.Regional_Director__r.FirstName &amp; &quot; &quot; &amp; Alt_Employer__r.Regional_Director__r.LastName ,

IF
( 

(Recruited_By__r.Employer1__c =&quot;SEIU-UHW&quot; || Recruited_By__r.Employer1__c =&quot;SEIU-UHW LT&quot;) &amp;&amp; CONTAINS(&quot;Kaiser:KAISER:Hospital:HOSPITAL:Community:COMMUNITY&quot;,Recruited_By__r.Department)  &amp;&amp;  CONTAINS(&quot;UNION REP/ORG:REG POLI ORG:ORGANIZER&quot;,Recruited_By__r.Title),  
Recruited_By__r.User_Profile__r.Acting_Field_Director_Name__c ,

Recruited_By__r.Regional_Director__c 

)
)</formula>
        <inlineHelpText>Field director of the UNION REP/ORG.</inlineHelpText>
        <label>Regional Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemDt__c</fullName>
        <description>This is a reminded datetime field short name use for list view.</description>
        <formula>Reminded_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a reminded datetime field short name use for list view.</inlineHelpText>
        <label>RemDt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rem__c</fullName>
        <description>This is a reminded field short name use for list view.</description>
        <formula>Reminded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a reminded field short name use for list view.</inlineHelpText>
        <label>Rem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remind_Response__c</fullName>
        <label>Remind Response</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminded_Time__c</fullName>
        <label>Reminded Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reminded__c</fullName>
        <formula>IF( Remind_Response__c =&quot;Reminded&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Org__c</fullName>
        <description>This is for the Hospital Organizers; to separate two organizers from Stanford and Lucille; This is old formula.</description>
        <formula>IF(OR(CONTAINS(&quot;3166:3167&quot;,Employer_ID__c),CONTAINS(&quot;1107-000997649:1107-000093602&quot;, Recruited_By_FID__c )),  Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName, 

IF (OR(ISNULL(Recruit__c ), ISBLANK(Recruit__c )),   IF( ISBLANK(Alt_Employer__c) ,  IF(Recruited_By__r.Account.Name=&quot;SEIU-UHW&quot;, Recruited_By__r.FirstName &amp; &quot; &quot; &amp; Recruited_By__r.LastName ,Recruited_By__r.Coordinator__c),  Alt_Employer__r.Organizer_1__r.FirstName  &amp; &quot; &quot; &amp; Alt_Employer__r.Organizer_1__r.LastName),     
 IF( CONTAINS(&quot;8913:8955:8956:8957&quot;, Recruit__r.Account.Employer_ID__c) ,  Recruited_By__r.FirstName &amp; &quot; &quot; &amp; Recruited_By__r.LastName, Recruit__r.Account.Organizer_1__r.FirstName &amp; &quot; &quot; &amp; Recruit__r.Account.Organizer_1__r.LastName) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep/Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Tags__c</fullName>
        <description>Report Tags from Recruit contact record.</description>
        <formula>Recruit__r.Report_Tags__c</formula>
        <label>Report Tags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SatTotShift__c</fullName>
        <formula>IF( RecruitDay__c =7,  Total_Shift__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SatTotShift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_End__c</fullName>
        <label>Shift End</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Start__c</fullName>
        <label>Shift Start</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Status__c</fullName>
        <label>Shift Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Location__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>10AM-2PM</fullName>
                </value>
                <value>
                    <fullName>11AM-3PM</fullName>
                </value>
                <value>
                    <fullName>2PM-6PM</fullName>
                </value>
                <value>
                    <fullName>3:30PM-7:30PM</fullName>
                </value>
                <value>
                    <fullName>5PM-9PM</fullName>
                </value>
                <value>
                    <fullName>12PM-4PM</fullName>
                </value>
                <value>
                    <fullName>12N-4PM</fullName>
                </value>
                <value>
                    <fullName>4PM-8PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_In_Time__c</fullName>
        <label>Signed In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signed_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Out_Time__c</fullName>
        <label>Signed Out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signed_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Up_But_No_Show__c</fullName>
        <description>old formula:
IF(CONTAINS(Alt_Last_Name__c, &quot;dummy&quot;), FALSE, IF(AND(AND(TEXT(Recruit_Status__c) = &quot;Signed Up&quot;,  Attended_2__c  =FALSE, Volunteer_Date__c &lt; TODAY())), TRUE, FALSE))</description>
        <formula>IF( CONTAINS(Alt_Last_Name__c, &quot;dummy&quot;) , FALSE,  IF(TEXT(Recruit_Status__c) = &quot;Signed Up&quot; &amp;&amp; Attended_2__c  =FALSE &amp;&amp; Volunteer_Date__c &lt; TODAY() &amp;&amp;  Signed_In__c =FALSE , TRUE, FALSE) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Up_Count__c</fullName>
        <formula>IF(CONTAINS(Alt_Last_Name__c, &quot;dummy&quot;) , 0, IF(TEXT(Recruit_Status__c)=&quot;Signed Up&quot;, 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed-Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signed_Up_Showed_Up_Zero_Credit__c</fullName>
        <description>old formula: IF(Attended_2__c =TRUE  &amp;&amp; Volunteer_Date__c &lt; TODAY()  &amp;&amp; Total_Shift__c =0 , TRUE, FALSE)</description>
        <formula>IF( Signed_In__c =TRUE  &amp;&amp; Volunteer_Date__c &lt; TODAY()  &amp;&amp; Total_Shift__c &lt;=0 , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show-No Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_Shift__c</fullName>
        <formula>IF(  (Recruit_Name_2__c =    Recruited_By__r.Contact_Name__c )  &amp;&amp;  CONTAINS(&quot;SEIU-UHW:SEIU-UHW LT&quot;, Employer_Name__c ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Shift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(TEXT( Recruit_Status__c) =&quot;Signed Up&quot;, &quot;Commit&quot;,TEXT(Recruit_Status__c)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurpriseShow__c</fullName>
        <description>check if the  volunteer show up on phone bank day during the week at 4 PM or later or weekend at 11 AM or later.</description>
        <formula>IF(
(WEEKDAY(Volunteer_Date__c) = 1  || WEEKDAY(Volunteer_Date__c) = 7)  &amp;&amp; DATEVALUE(CreatedDate) =  Volunteer_Date__c  &amp;&amp;  CmtHour__c &gt;=11 , 
TRUE, 

IF( (WEEKDAY(Volunteer_Date__c) = 2  || WEEKDAY(Volunteer_Date__c) = 3  || WEEKDAY(Volunteer_Date__c) = 4  || WEEKDAY(Volunteer_Date__c) = 5  || WEEKDAY(Volunteer_Date__c) =6) &amp;&amp; DATEVALUE(CreatedDate) =  Volunteer_Date__c  &amp;&amp;  CmtHour__c &gt;=16, TRUE,FALSE)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SurpriseShow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalShiftCompleted_Old__c</fullName>
        <formula>IF( TEXT(Credit__c)=&apos;Full&apos; , 1,  IF(TEXT(Credit__c)=&apos;Half&apos;, 0.5, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalShiftCompleted_Old</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Shift__c</fullName>
        <formula>IF( Attended__c =TRUE, CASE(  CreditShift__c , &apos;Full&apos;, 1, &apos;Half&apos;, 0.5,0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift Completed</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TueTotShift__c</fullName>
        <formula>IF(   RecruitDay__c =3 , Total_Shift__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TueTotShift</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <description>location + volunter date + shift + recruit name + employer</description>
        <inlineHelpText>Do not touch this; System Generated</inlineHelpText>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Volunteer_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Volunteer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volunteer_Type__c</fullName>
        <label>Volunteer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Banking</fullName>
                    <default>true</default>
                    <label>Phone Banking</label>
                </value>
                <value>
                    <fullName>Precinct Walking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WedTotShift__c</fullName>
        <formula>IF(   RecruitDay__c =4,  Total_Shift__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WedTotShift</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wkly_Goal__c</fullName>
        <formula>IF( Goal__c &gt;0, Goal__c/5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wkly Goal</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>elapsedtest__c</fullName>
        <formula>ROUND((Signed_Out_Time__c - Signed_In_Time__c ) * 24 * 60,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>elapsedtest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rec_cnt__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>rec_cnt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Recruit</label>
    <listViews>
        <fullName>Arroyo_Grande_PB_All_Time</fullName>
        <columns>Volunteer_Date__c</columns>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2018</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Arroyo Grande</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Arroyo Grande PB All Time</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arroyo_Grande_PB_Today</fullName>
        <columns>Location__c</columns>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Arroyo Grande</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Arroyo Grande PB Today</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arroyo_Grande_PB_Tomorrow</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Arroyo Grande</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Arroyo Grande PB Tomorrow</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arroyo_Grande_PB_Yesterday</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Arroyo Grande</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Arroyo Grande PB Yesterday</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bakersfield_PB_All_Time</fullName>
        <columns>Volunteer_Date__c</columns>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2018</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Bakersfield</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Bakersfield PB All Time</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bakersfield_PB_Today</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Bakersfield</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Bakersfield PB Today</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bakersfield_PB_Tomorrow</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Bakersfield</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Bakersfield PB Tomorrow</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bakersfield_PB_Yesterday</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Bakersfield</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Bakersfield PB Yesterday</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chico_PB_All_Time</fullName>
        <columns>Volunteer_Date__c</columns>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2018</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Chico</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Chico PB All Time</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chico_PB_Today</fullName>
        <columns>Location__c</columns>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Chico</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Chico PB Today</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chico_PB_Tomorrow</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Chico</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Chico PB Tomorrow</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chico_PB_Yesterday</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Chico</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Chico PB Yesteday</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
</CustomObject>